--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -91,7 +91,9 @@
             android:typeface="sans"
             app:layout_constraintTop_toBottomOf="@id/Plants"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:paddingStart="12dp"
             android:background="#66000000"/>
 
         <TextView
@@ -104,8 +106,9 @@
             app:layout_constraintTop_toBottomOf="@id/Price"
             app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="textEnd"
-            android:layout_marginEnd="30dp"
-            android:background="#66000000"/>
+            android:layout_marginEnd="15dp"
+            android:paddingEnd="8dp"
+            android:layout_marginStart="15dp"/>
 
 
 
